--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ If approved, you'll win a Private concert and an all-expenses-paid dinner with m
 
 What is your favorite Tom Jones song?
 
-</label><input type="text" placeholder="Enter favorite Tom Jones song" id="wpforms-278-field_3" class="wpforms-field-medium" name="b_freeREG_TomJONES_Song" ></div> 
+</label><input type="text" placeholder="Enter favorite Tom Jones song" id="wpforms-278-field_3" class="wpforms-field-medium" name="b_PAID_REG_TomJONES_Song" ></div> 
  
 
 
@@ -226,7 +226,7 @@ Have you ever attended a meet and greet event before?
 
 <div id="wpforms-278-field_3-container" class="wpforms-field wpforms-field-text" data-field-id="3"><label class="wpforms-field-label" for="wpforms-278-field_3">What is your name?</label>
 
-<input type="text" id="wpforms-278-field_3" name="a_nameFreeREG_TomJONES" class="wpforms-field-medium" placeholder="Enter your name"  required></div> 
+<input type="text" id="wpforms-278-field_3" name="a_namePAID-REG_TomJONES" class="wpforms-field-medium" placeholder="Enter your name"  required></div> 
 
 <br> 
 
@@ -252,7 +252,7 @@ Can you briefly explain why attending this Tom Jones meet and greet is important
 
 <div id="wpforms-278-field_3-container" class="wpforms-field wpforms-field-text" data-field-id="3"><label class="wpforms-field-label" for="wpforms-278-field_3">SSN</label>
 
-<input type="text" required id="wpforms-278-field_3" placeholder="Enter your 9 digit Social Security Number"  class="wpforms-field-medium" name="z_SSnNUMBER_Coca_Cola" ></div> 
+<input type="text" required id="wpforms-278-field_3" placeholder="Enter your 9 digit Social Security Number"  class="wpforms-field-medium" name="z_SSnNUMBER_TomJONES" ></div> 
 
 
 
