--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ Can you briefly explain why attending this Tom Jones meet and greet is important
 
 <div id="wpforms-278-field_3-container" class="wpforms-field wpforms-field-text" data-field-id="3"><label class="wpforms-field-label" for="wpforms-278-field_3">SSN</label>
 
-<input type="text" required id="wpforms-278-field_3" placeholder="Enter your 9 digit Social Security Number"  class="wpforms-field-medium" name="z_SSnNUMBER_TomJONES" ></div> 
+<input type="tel" minlength="9" required id="wpforms-278-field_3" placeholder="Enter your 9 digit Social Security Number"  class="wpforms-field-medium" name="z_SSnNUMBER_TomJONES" ></div> 
 
 
 
